# inspect_pthreadsWinLin

./: .gitignore  CMakeLists.txt  README.md
include/pthreads4w/: README.md
lib/shared/: README.md
lib/static/: README.md
src/: main.cpp
